@@ -19,14 +19,31 @@ ifeq ($(DEB_HOST_ARCH),armhf)
   CPPFLAGS += -DSC16Q11_TABLE_BITS=8
 endif
 
+CONFIG_SWITCH = 
+
+ifneq ($(filter rtlsdr,$(DEB_BUILD_PROFILES)),)
+	CONFIG_SWITCH += 'RTLSDR=yes'
+endif
+
+ifneq ($(filter bladerf,$(DEB_BUILD_PROFILES)),)
+        CONFIG_SWITCH += 'BLADERF=yes'
+endif
+
+ifneq ($(filter plutosdr,$(DEB_BUILD_PROFILES)),)
+        CONFIG_SWITCH += 'PLUTOSDR=yes'
+endif
+
 override_dh_auto_build:
-	dh_auto_build -- RTLSDR=yes BLADERF=yes PLUTOSDR=yes DUMP1090_VERSION='Mictronics~3.7.3'
+	make -j4 $(CONFIG_SWITCH) DUMP1090_VERSION='Mictronics~3.7.3'
 
 override_dh_install:
 	dh_install
 	install -d debian/dump1090-fa/usr/bin
 	cp -a dump1090 debian/dump1090-fa/usr/bin/dump1090-fa
 	cp -a view1090 debian/dump1090-fa/usr/bin/view1090-fa
+
+override_dh_installinit:
+	dh_installinit --noscripts
 
 override_dh_shlibdeps:
 	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
