@@ -1,8 +1,9 @@
 dump1090-fa (3.7.3~dev) UNRELEASED; urgency=medium
 
   * In development
+  * Accept profiles to build package with indivitual or no receiver library dependencies.
 
- -- Michael Wolf <michael@mictronics.de>  Thu, 26 Jul 2019 18:49:21 +0200
+ -- Michael Wolf <michael@mictronics.de>  Sun, 01 Sep 2019 11:57:14 +0200
 
 dump1090-fa (3.7.2) stable; urgency=medium
 
